Fixed an issue in IE11 where the min-width setting on b-menu causes overflow issues with the divider line for l-multicol--am

--- a/src/_blocks/menu/_menu.scss
+++ b/src/_blocks/menu/_menu.scss
@@ -9,7 +9,7 @@
 // Main Nav Styles
 // ===============
 .b-menu {
-	min-width: 220px;
+	// width: 220px;
 	margin-bottom: 60px;
 }
 
